--- a/Message-Generator-Program.html
+++ b/Message-Generator-Program.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script&family=Space+Mono&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script href="Message-Generator-Program.js"></script>
+        <script src="Message-Generator-Program.js"></script>
         <title>Fortune Teller</title>
     </head>
     <body>
